<?xml version="1.0"?>
<package format="3">
  <name>four_wheel_bot</name>
  <version>0.1.0</version>
  <description>ROS 2 control and sensor interface for a Raspberry Pi robot</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- optional dev packages
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
   -->

  <!-- Optional system tools -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
